add router create exercise
