# validators/exercise.validator.js
@@ -3,18 +3,34 @@ const Joi = require("@hapi/joi");
 module.exports = function (fields = []) {
     const getSchema = (field) => {
         switch (field) {
-            case "name":
+            case "code":
+                return Joi.string().min(2).max(255).required();
+            case "content":
+                return Joi.string().min(2).max(2000).required();
+            case "course":
                 return Joi.string()
-                    .min(1)
+                    .min(2)
                     .max(255)
                     .trim()
                     .lowercase()
                     .regex(/^[a-zA-Z ]/)
                     .required();
+            case "group":
+                return Joi.string().min(2).max(255);
             case "active":
                 return Joi.boolean().required();
-            case "thumbnail":
-                return Joi.string().min(1).max(2000).required();
+            case "point":
+                return Joi.number().required();
+            case "attempt":
+                return Joi.number().required();
+            case "deadline":
+                return Joi.object({
+                    day: Joi.number().min(1).max(31).required(),
+                    month: Joi.number().min(1).max(12).required(),
+                    year: Joi.number().min(2020).max(2030).required(),
+                    hour: Joi.number().min(0).max(23).required(),
+                    minute: Joi.number().min(0).max(59).required(),
+                }).required();
         }
     };
 
